# ClearerVoice48k

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/clearervoice48k/: clearvoice.py  network_wrapper.py  networks.py
src/clearervoice48k/config/inference/: MossFormer2_SR_48K.yaml
src/clearervoice48k/dataloader/: dataloader.py  meldataset.py  misc.py
src/clearervoice48k/models/mossformer2_se/: fsmn.py  mossformer2.py  mossformer2_block.py  mossformer2_se_wrapper.py
src/clearervoice48k/models/mossformer2_sr/: conv_module.py  generator.py  layer_norm.py  mossformer2.py  mossformer2_sr_wrapper.py  utils.py
src/clearervoice48k/utils/: bandwidth_sub.py  decode.py  misc.py
